styles.css
/* General Styles */
body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f0f0f0;
    color: #333;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

/* Header */
header {
    position: sticky;
    top: 0;
    background-color: #2c2c2c;
    color: white;
    text-align: center;
    padding: 5px 0;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
}

/* Main Content */
main {
    flex: 1;
    padding: 20px 20px;
    text-align: center;
}

.form-container {
    background: #fff;
    padding: 30px;
    margin: 0px auto 20px auto;
    border-radius: 8px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
    max-width: 40em;
}

label {
    display: block;
    margin-bottom: 10px;
    font-size: 1.1em;
    color: #555;
}

input[type="text"] {
    width: 100%;
    padding: 12px;
    margin-bottom: 15px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 1em;
    background-color: #f9f9f9;
    box-sizing: border-box;
}

button {
    width: 100%;
    padding: 12px;
    border: none;
    background-color: #4a4a4a;
    color: white;
    font-size: 1em;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s;
}

button:hover {
    background-color: #636363;
}

/* Output Section */
.output {
    margin-top: 20px;
    margin: auto;
    max-width: 60em;
    padding: 15px;
    background-color: #ededed;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 1em;
    color: #333;
    display: none;
    text-align: left;
}

.contents {
    margin-top: 20px;
    margin: auto;
    max-width: 60em;
    padding: 15px;
    background-color: #ededed;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 1em;
    color: #333;
    display: block;
    text-align: left;
}

/* Output Section */
.latex-string {
    line-height: 2.5;
    text-align: center;
}

.warning {
    background-color: rgb(255, 230, 230);
    border: red;
    border-width: 1px;
    border-style: solid;
    border-radius: 8px;
    padding: 5px;
    text-align: center;
}

/* Footer */
footer {
    position: sticky;
    bottom: 0;
    background-color: #2c2c2c;
    color: #aaa;
    text-align: center;
    padding: 5px 0;
    margin-top: auto;
    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
}

footer p {
    margin: 0;
    font-size: 0.9em;
}

.tg {
    border-collapse: collapse;
    border-spacing: 0;
    display: block;
    overflow-x: auto;
}

.tg td {
    border-color: black;
    border-style: solid;
    border-width: 1px;
    font-family: Arial, sans-serif;
    font-size: 14px;
    overflow: hidden;
    padding: 10px 5px;
    word-break: normal;
}

.tg th {
    border-color: black;
    border-style: solid;
    border-width: 1px;
    font-family: Arial, sans-serif;
    font-size: 14px;
    font-weight: normal;
    overflow: hidden;
    padding: 10px 5px;
    word-break: normal;
}

.tg .tg-0pky {
    border-color: inherit;
    text-align: left;
    vertical-align: center;
}

.tg .tg-1pky {
    border-color: inherit;
    text-align: center;
    vertical-align: center;
}

[type="checkbox"]
{
    vertical-align:middle;
}

.table-settings {
    margin-bottom: 15px;
}

li {
    margin-top: 3px;
    margin-bottom: 3px;
}

ul {
    margin-top: 3px;
}

